<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_startseitenanzeigen_intro"/>
    <Button
    android:id="@+id/sf_position_senden"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/sf_position_senden"/>
    <Button
        android:id="@+id/sf_starte_geokontakte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_geokontakte_verwalten"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_karte_anzeigen"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sf_simulation"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/whereareyou_logo"/>

</LinearLayout>
